[tool.poetry]
name = "coffeeroastanalyzer"
version = "0.1.0"
description = ""
authors = ["Hannes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rawpy = "^0.22.0"
imageio = "^2.35.1"
streamlit = "^1.38.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
